--- a/estilo/compras.css
+++ b/estilo/compras.css
@@ -1,30 +1,22 @@
-@charset "UTF-8";
-
 *{
     margin: 0px;
     padding: 0px;
 }
 
 body{
-    background-color: white;
+    background-color: gray;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-div.header{
-    background-color: black;
-    color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, serif;
-    text-align: center;
-    padding: 20px;
-    width: 100vw;
-}
-
-div.container{
-    width: 800px;
-    height: 100vh;
+main{
+    background-color: white;
+    width: 500px;
+    height: 400px;
     margin: auto;
+    margin-top: 50px;
     max-width: 1000px;
-    min-width: 600px;
+    min-width: 500px;
+    border-radius: 10px;
 }
 
 div.card{
@@ -35,7 +27,7 @@ div.card{
     margin-top: 10px;
     margin-left: 15px;
     border-radius: 10px;
-    float: left;
+    margin-left: 120px;
 }
 
 div.card p.img{
@@ -44,7 +36,7 @@ div.card p.img{
 
 div.card img{
     margin-top: 20px;
-    width: 50%;
+    width: 40%;
     text-align: center;
     border-radius: 5px;
 }
@@ -66,4 +58,27 @@ div.card h3::after{
 div.card:hover{
     transition: 0.4s;
     border-radius: 1px solid white;
+}
+
+a.bt-compra{
+    padding: 20px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+}
+
+a.bt-compra p{
+    background-color: green;
+    padding: 20px;
+    width: 250px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+a.bt-compra p:hover{
+    border: 1px solid green;
+    background-color: white;
+    color: green;
+    transition: 0.4s;
 }
