--- a/estilo/obrigado.css
+++ b/estilo/obrigado.css
@@ -7,22 +7,69 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    background-color: #292929;
 }
 
 main{
     width: 400px;
     height: 400px;
-    background-color: gray;
     margin: auto;
     margin-top: 30px;
+    max-width: 1000px;
+    min-width: 300px;
 }
 
-p.img{
+p.sucefull{
     text-align: center;
 }
 
 h2{
     color: green;
     text-align: center;
+}
+
+.alert{
+    text-align: center;
+    margin: 8px;
+}
+
+div.card{
+    height: 120px;
+    width: 130px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    float: left;
+    margin: auto;
+    margin-left: 3px;
+}
+
+div.card p.img{
+    text-align: center;
+}
+
+div.card img{
+    margin-top: 20px;
+    width: 40%;
+    text-align: center;
+    border-radius: 5px;
+}
+
+div.card h3{
+    text-align: center;
+    color: white;
+}
+
+div.card h3::after{
+    content: '';
+    display: block;
+    background-color: blueviolet;
+    width: 130px;
+    height: 2px;
+    color: white;
+}
+
+div.card:hover{
+    transition: 0.4s;
+    border-radius: 1px solid white;
 }
