--- a/estilo/home.css
+++ b/estilo/home.css
@@ -10,6 +10,18 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+div.nav{
+    background-color: black;
+    padding: 12px;
+    
+}
+
+div.nav a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 div.header{
     background-color: black;
     color: white;
