--- a/estilo/info.css
+++ b/estilo/info.css
@@ -9,6 +9,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: linear-gradient(to right, #292929, #404040);
     color: white;
+    background-attachment: fixed;
 }
 
 h1{
