--- a/estilo/info.css
+++ b/estilo/info.css
@@ -29,6 +29,8 @@ strong{
 main p{
     margin-top: 15px;
     margin-bottom: 15px;
+    margin-left: 10px;
+    margin-right: 5px;
     font-weight: bold;
 }
 
