--- a/estilo/home.css
+++ b/estilo/home.css
@@ -13,6 +13,8 @@ body{
 div.nav{
     background-color: black;
     padding: 12px;
+    max-width: 1000vw;
+    min-width: 600px;
     
 }
 
@@ -22,6 +24,16 @@ div.nav a{
     font-weight: bold;
 }
 
+div.nav a:hover{
+    border-radius: 5px;
+    background-color: #404040;
+
+}
+
+div.nav p{
+    display: inline-flex;
+    padding: 10px;
+}
 div.header{
     background-color: black;
     color: white;
@@ -42,6 +54,11 @@ div.container{
 div.card{
     height: 240px;
     width: 250px;
+    background-image: url('../imagens/fundo-card001.png');
+    background-repeat: no-repeat;
+    background-position: right top;
+    /*background-image: url('../imagens/fundo-cards.png');*/
+    background-repeat: no-repeat;
     background-color: black;
     color: white;
     margin-top: 10px;
@@ -77,5 +94,5 @@ div.card h3::after{
 
 div.card:hover{
     transition: 0.4s;
-    border-radius: 1px solid white;
+    color: white;
 }
