--- a/estilo/home.css
+++ b/estilo/home.css
@@ -2,11 +2,16 @@
 
 *{
     margin: 0px;
+    padding: 0px;
 }
 
 body{
     background-color: #292929;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+menu{
+    background-color: black;
 }
 
 div.header{
