--- a/estilo/home.css
+++ b/estilo/home.css
@@ -119,7 +119,7 @@ div.card{
     color: white;
     margin: auto;
     margin-top: 10px;
-    margin-left: 15px;
+    margin-left: 50px;
     border-radius: 10px;
     float: left;
 }
@@ -186,6 +186,7 @@ div.card:hover{
         text-align: center;
         padding: 10px;
         cursor: pointer;
+        padding: 17px;
     }
     
     i#burguer:hover{
@@ -251,4 +252,22 @@ div.card:hover{
         max-width: 1000px;
         min-width: 600px;
    } 
+
+   div.card{
+    height: 240px;
+    width: 250px;
+    background-image: url('../imagens/fundo-card001.png');
+    background-repeat: no-repeat;
+    background-position: right top;
+    /*background-image: url('../imagens/fundo-cards.png');*/
+    background-repeat: no-repeat;
+    background-color: black;
+    color: white;
+    margin: auto;
+    margin-top: 10px;
+    margin-left: 30px;
+    border-radius: 10px;
+    float: left;
+}
+
 }
