--- a/estilo/login-a.css
+++ b/estilo/login-a.css
@@ -2,80 +2,90 @@
 
 *{
     margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+html, body{
+    width: 100vw;
+    height: 100vh;
 }
 
 body{
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #292929;
-    color: white;
 }
 
 main{
-    width: 350px;
-    background-color: #454545;
+    margin-top: 15px;
+    background-color: #404040;
     margin: auto;
-    margin-top: 20px;
-    color: black;
-    text-align: center;
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px black;
+    width: 600px;
 }
 
 label{
     color: white;
     font-weight: bold;
-}
-
-::placeholder{
-    color: white;
+    margin-top: 10px;
 }
 
 input{
-    margin-bottom: 15px;
     margin-top: 15px;
-    background-color: black;
-    border: none;
+    margin-bottom: 15px;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 15px;
     color: white;
-    padding: 10px;
+    background-color: transparent;
 }
 
-input#iemail{
-    background-color: black;
-    border-radius: 1px solid black;
+fieldset{
+    border: 2px solid #505050;
+    width: 400px;
+    display: block;
+    margin: auto;
+}
+
+fieldset > legend{
+    text-align: center;
     color: white;
+    background-image: linear-gradient(to right, #505050, #292929);
+    border-radius: 5px;
 }
 
-#confirmar{
-    width: 100%;
-    padding: 5px;
-    background-color: green;
-    font-weight: bold;
-    font-size: 1.1em;
-    cursor: pointer;
-    border: 0px solid transparent;
+#genero{
+    text-align: center;
 }
 
-#confirmar:hover{
-    padding: 7px;
-    background-color: white;
-    color: green;
-    transition: 0.4s;
+#ifeminino, #ioutro{
+    margin-left: 15px;
+}
+
+form > p{
+    text-align: center;
 }
 
 #cancelar{
-    cursor: pointer;
-    width: 100%;
-    padding: 5px;
-    background-color: red;
+    border-color: red;
+    color: white;
     font-weight: bold;
-    font-size: 1.1em;
-    border: 0px solid transparent;
+    padding: 10px;
+    transition-duration: 0.3s;
+    cursor: pointer;
 }
 
 #cancelar:hover{
-    padding: 7px;
-    background-color: white;
-    color: red;
-    transition: 0.4s;
+    background-color: red;
+}
+
+#confirmar{
+    border-color: green;
+    color: white;
+    font-weight: bold;
+    padding: 10px;
+    transition-duration: 0.3s;
+    cursor: pointer;
+}
+
+#confirmar:hover{
+    background-color: green;
 }
