--- a/estilo/login-a.css
+++ b/estilo/login-a.css
@@ -39,9 +39,10 @@ label{
 }
 
 input{
+    border: none;
+    border-bottom: 1px solid gray;
     margin-top: 15px;
     margin-bottom: 15px;
-    border: 2px solid white;
     border-radius: 10px;
     padding: 15px;
     color: white;
