--- a/estilo/compras.css
+++ b/estilo/compras.css
@@ -4,6 +4,11 @@
 }
 
 body{
+    background-image: url('../imagens/fundo-cards.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
     background-color: #292929;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -11,12 +16,15 @@ body{
 main{
     background-color: white;
     width: 400px;
-    height: 280px;
+    height: 310px;
     margin: auto;
     margin-top: 50px;
     max-width: 1000px;
     min-width: 300px;
     border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-0%, 45%);
 }
 
 div.card{
@@ -60,6 +68,22 @@ div.card h3{
 div.card:hover{
     transition: 0.4s;
     border-radius: 1px solid white;
+}
+
+p.input{
+    text-align: center;
+    margin-top: 10px;
+}
+
+input#inumber{
+    background-color: #404040;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+    width: 50px;
+    font-weight: bold;
+    text-align: center;
 }
 
 a.bt-compra{
