--- a/estilo/login-apres.css
+++ b/estilo/login-apres.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
 
-
-
 body{
     background-color: #292929;
     font-family: Arial, Helvetica, sans-serif;
@@ -18,6 +16,8 @@ main{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    max-width: 1000px;
+    min-width: 400px;
 }
 
 a#link{
@@ -59,8 +59,4 @@ a#link-d:hover{
     color: green;
     transition-duration: 0.3s;
     transform: translate(-10px, -10px);
-}
-
-abbr{
-    text-decoration: none;
 }
