--- a/estilos/video-play.css
+++ b/estilos/video-play.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+*{
+    margin: 0px;
+}
+
 :root{
     --cor-menu: #161B22; 
     --cor-fundo: #0D1117;
@@ -14,21 +18,33 @@ body{
 
 div.video{
     background-color: white;
-    width: 573px;
+    width: 615px;
     height: 350px;
-    margin-left: 10px;
+    margin-top: 15px;
     border-radius: 10px;
+    margin: auto;
+    max-width: 615px;
+    min-width: 610px;
+}
+
+div.desc{
+    background-color: var(--cor-menu);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+    width: 600px;
+    border-radius: 10px;
+    font-size: 1em;
+    color: white;
+}
+
+div.desc > h1{
+    text-align: center;
 }
 
 div.escolha{
     background-color: var(--cor-menu);
-    position: relative;
-    width: 350px;
-    top: 10%;
-    left: 85%;
-    transform: translate(-65%, -87%);
-    border-radius: 5px;
-    border: 0.5px solid var(--cor-letra);
+    
 }
 
 div.escolha a{   
@@ -38,20 +54,15 @@ div.escolha a{
     width: 300px;
 }
 
-div.escolha a.curs::after{
-    content: '';
-    display: block;
+p.link{
+    border-bottom: 1px solid var(--cor-letra);
+    padding: 12px;
+}
+
+p.link:hover{
     background-color: var(--cor-letra);
-    width: 350px;
-    color: white;
-    height: 1px;
 }
 
 div.escolha > p > a:hover{
     text-decoration: underline;
-}
-
-div.escolha p{
-    margin-bottom: 10px;
-    margin-top: 15px;
 }
