--- a/estilos/home.css
+++ b/estilos/home.css
@@ -220,3 +220,10 @@ div.redes-sociais a{
 div.redes-sociais a:hover{
     text-decoration: underline;
 }
+
+
+/*Smartphone*/
+
+@media screen and (max-width: 767px) {
+    
+}
