--- a/estilos/home.css
+++ b/estilos/home.css
@@ -1,5 +1,314 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Lato&family=Roboto&display=swap');
+
 *{
-    
+    margin: 0px;
+    padding: 0px;
+}
+
+:root{
+    --cor-de-fundo: #081226;
+    --cor-de-blocos: #142B59;
+    --cor-secundaria: #646E78;
+    --cor-de-destaque: #FFC800;
+    --cor-da-letra: #FFFFF2;
+    --fonte-de-texto: 'Roboto', sans-serif;
+    --fonte-de-titulo: 'Lato', sans-serif;
+    --fonte-de-destaque: 'Dosis', sans-serif;
+}
+
+body{
+    background-color: var(--cor-de-letra);
+    color: black;
+    font-family: var(--fonte-de-texto);
+}
+
+h1,h2{
+    font-family: var(--fonte-de-titulo);
+}
+
+menu{
+    background-color: var(--cor-de-fundo);
+    height: 15vh;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+div.img{
+    display: inline-flex;
+    margin-top: 0px;
+    padding-top: 0px;
+    width: 640px;
+}
+
+div.img > a{
+    width: 130px;
+}
+
+div.img > a > p{
+    text-align: left;
+}
+
+div.img > a > p > img{
+    width: 90%;
+}
+
+div.img > a > p > img::selection{
+    background-color: #142B59;
+}
+
+div.menu{
+    display: inline-flex;
+    width: 360px;
+}
+
+div.menu p{
+    text-align: right;
+}
+
+menu p{
+    text-align: right;
+}
+
+menu p::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+menu a{
+    color: white;
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+menu a::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+menu a:hover{
+    color: var(--cor-de-destaque);
+    transition-duration: 0.3s;
+}
+
+#used{
+    color: var(--cor-de-destaque);
+}
+
+#used:hover{
+    color: white;
+}
+
+main{
+    width: 100%;
+}
+
+div.apr-titulo-desc{
+    height: 70vh;
+    background-color: #646E78;
+    background-image: url('../imagens/social-media-gc71d97d5f_1920.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+div.apr-titulo-desc > h1{
+    text-align: center;
+    padding-top: 50px;
+    color: var(--cor-de-blocos);
+    font-size: 4em;
+    margin-bottom: 100px;
+}
+
+div.apr-titulo-desc > h1::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.apr-titulo-desc p{
+    width: 200px;
+    text-align: center;
+    background-color: var(--cor-de-destaque);
+    display: block;
+    margin-top: 25px;
+    padding: 10px;
+    border-radius: 20px;
+    margin: auto;
+    font-weight: bold;
+}
+
+div.apr-titulo-desc p::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+a.link{
+    background-color: var(--cor-de-letra);
+    color: #FFFFFF;
+    text-decoration: none;
+    width: 200px;
+}
+
+a.link::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.desc-emp-number{
+    background-color: var(--cor-de-fundo);
+    color: white;
+    height: 15vh;
+    padding: 20px;
+}
+
+div.desc-emp-number p::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.desc-emp-number > h1{
+    color: white;
+    text-align: center;
+    margin-top: 20px;
+}
+
+div.desc-emp-number h1::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.our-adverstisements{
+    background: url('../imagens/social-g6e679378d_1920.jpg');  
+    background-position: top top;
+    background-size: cover;    
+    background-attachment: fixed;
+    color: var(--cor-da-letra);
+    height: 65vh;
+}
+
+div.info-b{
+    font-family: var(--fonte-de-texto);
+    font-weight: normal;
+    color: #FFC800;
+    display: inline-block;
+    width: 500px;
+    height: 15vh;
+    padding-top: 80px;
+}
+
+div.info-b::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.info-b > h2{
+    margin-top: 40px;
+    text-align: center;
+    font-size: 3em;
+}
+
+div.info-b h2::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.blog{
+    background-color: var(--cor-de-fundo);
+    color: white;
+    height: 30vh;
+}
+
+div.blog > h2{
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+div.blog h2::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.blog p{
+    border: 1px solid #FFFFF2;
+    text-decoration: none;
+    color: white;
+    width: 200px;
+    text-align: center;
+    height: 20px;
+    border-radius: 20px;
+    display: block;
+    margin: auto;
+    padding: 10px;
+}
+
+div.blog p::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.blog a{
+    text-decoration: none;
+    color: white;
+    width: 200px;
+}
+
+div.blog a::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.blog p:hover{
+    background-color: #FFFFFF;
+    color: var(--cor-de-blocos);
+    transition-duration: 0.5s;
+}
+
+div.social-media{
+    height: auto;
+    background-color: var(--cor-de-blocos);
+    color: white;
+}
+
+div.social-media > h1{
+    text-align: center;
+}
+
+div.social-media h1::selection{
+    background-color: #081226;
+    color: var(--cor-de-destaque);
+}
+
+div.info-c{
+    color: #FFFFFF;
+    display: inline-block;
+    width: 500px;
+    height: 10vh;
+}
+
+#info-cds{
+    text-align: left;
+    margin-left: 15px;
+}
+
+div.info-c > p{
+    margin-top: 20px;
+    text-align: center;
+}
+
+div.info-c p::selection{
+    background-color: #081226;
+    color: var(--cor-de-destaque);
+}
+
+div.info-c i{
+    margin-left: 50px;
+}
+
+div.info-c a{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+div.info-c a:hover{
+    color: #d8d8d8;
 }
