--- a/estilos/compras-rei.css
+++ b/estilos/compras-rei.css
@@ -74,7 +74,7 @@ div.produto{
     width: 300px;
     height: 250px;
     display: inline-block;
-    background-image: url('../imagens/Pacote\ Básico.png');
+    background-image: url('../imagens/Pacote\ Rei\ 300X250.png')
 }
 
 div.caracteristicas{
