--- a/estilos/loja.css
+++ b/estilos/loja.css
@@ -127,6 +127,8 @@ div.apr-titulo-desc > h1::selection{
 
 main{
     width: 100%;
+    max-width: 1000px;
+    min-width: 600px;
 }
 
 div.category{
@@ -291,4 +293,319 @@ div.info-c a{
 
 div.info-c a:hover{
     color: #d8d8d8;
+}
+
+
+
+
+
+
+
+
+
+
+/*TELEFONE*/
+
+
+
+
+
+@media screen and (max-width: 767px){
+
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Lato&family=Roboto&display=swap');
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+:root{
+    --cor-de-fundo: #081226;
+    --cor-de-blocos: #142B59;
+    --cor-secundaria: #646E78;
+    --cor-de-destaque: #FFC800;
+    --cor-da-letra: #FFFFF2;
+    --fonte-de-texto: 'Roboto', sans-serif;
+    --fonte-de-titulo: 'Lato', sans-serif;
+    --fonte-de-destaque: 'Dosis', sans-serif;
+}
+
+body{
+    background-color: var(--cor-de-blocos);
+    color: black;
+    font-family: var(--fonte-de-texto);
+}
+
+h1,h2{
+    font-family: var(--fonte-de-titulo);
+}
+
+menu{
+    background-color: var(--cor-de-fundo);
+    height: 15vh;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+div.img{
+    display: inline-flex;
+    margin-top: 0px;
+    padding-top: 0px;
+    width: 640px;
+}
+
+div.img > a{
+    width: 130px;
+}
+
+div.img > a > p{
+    text-align: left;
+}
+
+div.img > a > p > img{
+    width: 90%;
+}
+
+div.img > a > p > img::selection{
+    background-color: #142B59;
+}
+
+div.menu{
+    display: inline-flex;
+    width: 360px;
+}
+
+div.menu p{
+    text-align: right;
+}
+
+menu p{
+    text-align: right;
+}
+
+menu p::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+menu a{
+    color: white;
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+menu a::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+menu a:hover{
+    color: var(--cor-de-destaque);
+    transition-duration: 0.3s;
+}
+
+#used{
+    color: var(--cor-de-destaque);
+}
+
+#used:hover{
+    color: white;
+}
+
+main{
+    max-width: 1000px;
+    min-width: none;
+}
+
+div.apr-titulo-desc{
+    height: 70vh;
+    background-color: #646E78;
+    background-image: url('../imagens/social-media-gc71d97d5f_1920.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+div.apr-titulo-desc > h1{
+    text-align: center;
+    padding-top: 50px;
+    color: var(--cor-de-blocos);
+    font-size: 4em;
+    margin-bottom: 100px;
+}
+
+div.apr-titulo-desc > h1::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+main{
+    width: 100%;
+}
+
+div.category{
+    margin: auto;
+    width: 260px;
+    width: 65%;
+    background-color: transparent;
+}
+
+div.category > h1{
+    text-align: center;
+    font-size: 2.3em;
+    color: var(--cor-da-letra);
+    margin-bottom: 20px;
+}
+
+div.category-b{
+    width: 300px;
+    display: inline-block;
+    background-color: transparent;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+div.category-b p{
+    text-align: center;
+}
+
+div.category-b img{
+    width: 90%;
+}
+
+div.category-c{
+    width: 300px;
+    display: inline-block;
+    background-color: transparent;
+    margin: auto;
+}
+
+div.category-c p{
+    text-align: center;
+}
+
+div.category-c img{
+    width: 90%;
+}
+
+div.mais-vendidos{
+    width: 95%;
+    margin: auto;
+}
+
+div.mais-vendidos > h1{
+    text-align: center;
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+div.mais-vendidos-dropbox{
+    width: 300px;
+    display: inline-block;
+    background-color: transparent;
+    margin: auto;
+}
+
+div.mais-vendidos-dropbox-b{
+    width: 300px;
+    display: inline-block;
+    background-color: transparent;
+}
+
+div.mais-vendidos-dropbox, div.mais-vendidos-dropbox-b{
+    margin: auto;
+    margin-bottom: 30px;
+    margin-left: 45px;
+}
+
+div.mais-vendidos-dropbox p, div.mais-vendidos-dropbox-b p{
+    text-align: center;
+}
+
+div.mais-vendidos-dropbox img, div.mais-vendidos-dropbox-b img{
+    width: 110%;
+}
+
+div.info-compra h3{
+    color: #000000;
+}
+
+div.info-compra p{
+    text-align: left;
+}
+
+div.info-compra > p > strong{
+    font-size: 1.3em;
+    color: white;
+}
+
+div.info-compra a{
+    color: white;
+    text-decoration: none;
+}
+
+div.info-compra > a > p{
+    width: 200px;
+    text-align: center;
+    background-color: #FFC800;
+    display: block;
+    padding: 15px;
+    border-radius: 25px;
+    font-weight: bold;
+}
+
+div.info-compra > a > p:hover{
+    background-color: #bd9504;
+    transition-duration: 0.5s;
+}
+
+div.social-media{
+    height: auto;
+    background-color: var(--cor-de-fundo);
+    color: white;
+}
+
+div.social-media > h1{
+    text-align: center;
+}
+
+div.social-media h1::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.info-c{
+    color: #FFFFFF;
+    display: inline-block;
+    width: 500px;
+    height: 10vh;
+}
+
+#info-cds{
+    text-align: left;
+    margin-left: 15px;
+}
+
+div.info-c > p{
+    margin-top: 20px;
+    text-align: center;
+}
+
+div.info-c p::selection{
+    background-color: #142B59;
+    color: var(--cor-de-destaque);
+}
+
+div.info-c i{
+    margin-left: 50px;
+}
+
+div.info-c a{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+div.info-c a:hover{
+    color: #d8d8d8;
+}
 }
